# cyberguard-ai

./: .gitignore  CONTRIBUTING.md  CYBERGUARD_AI_PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
dashboard/: index.html
data/models/: README.md
data/sample/: README.md  traffic.csv
docs/: architecture.html  configuration.md  gmail_setup.md
mail-scanner/: index.html
mobile/: App.js  app.json  package-lock.json  package.json
mobile/src/: theme.js
mobile/src/components/: AlertCard.js  FindingCard.js  SeverityBadge.js  StatCard.js
mobile/src/navigation/: AppNavigator.js
mobile/src/screens/: AlertsScreen.js  DashboardScreen.js  NetworkScreen.js  (+3 more)
src/: main.py
src/api/: auth.py  gmail_integration.py  gmail_oauth.py  server.py  system_monitor.py  websocket.py
src/core/: base_detector.py  events.py  pipeline.py
src/defense/: __init__.py  block_store.py  firewall.py  setup_pf.py
src/detectors/: c2_beacon_detector.py  file_scanner.py  log_analyzer.py  network_detector.py  network_features.py  persistence_monitor.py  phishing_detector.py  phishing_features.py  port_scan_detector.py  process_monitor.py  signature_detector.py  usb_monitor.py  vuln_scanner.py
src/response/: __init__.py  rules_engine.py
src/utils/: sample_data.py  sample_emails.py
tests/: test_api.py  test_c2_beacon_detector.py  test_events.py  test_features.py  test_log_analyzer.py  test_network_detector.py  test_phishing_detector.py  test_phishing_features.py  test_port_scan_detector.py  test_vuln_scanner.py
(+2 files in other folders)
